Added discussion implementation
